force-app/main/default/objects/RSI_Insurance_Policy_Asset__c/RSI_Insurance_Policy_Asset__c.object-meta.xml
<CustomObject>
    <label>Policy Asset</label>
    <nameField>
        <displayFormat>PAN-{00000}</displayFormat>
        <label>Insurance Policy Asset Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>