force-app/main/default/objects/RSI_Insurance_Policy_Asset__c/fields/RSI_Asset__c.field-meta.xml
<CustomField>
    <fullName>RSI_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Insurance_Policy_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>