force-app/main/default/objects/RSI_Insurance_Policy_Asset__c/fields/RSI_Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>RSI_Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Personal Property</fullName>
            </value>
            <value>
                <fullName>Value 1</fullName>
                <isActive>false</isActive>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>