force-app/main/default/objects/RSI_Insurance_Policy_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RSI_Policy__c</columns>
    <columns>RSI_Asset_Type__c</columns>
    <columns>RSI_Asset__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>